[package]
name = "drogue-postgresql-pusher"
version = "0.2.1"
edition = "2018"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"

[dependencies]

actix-web = "4"
actix-web-httpauth = "0.6"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
cloudevents-sdk = { version = "0.4", features = ["actix", "reqwest"] }
config = "0.12"
deadpool = "0.8"
deadpool-postgres = { version = "0.9", features = ["config"] }
env_logger = "0.7"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
jsonpath_lib = "0.2.6"
log = "0.4"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime", "with-chrono-0_4"] }
olm-rs = "2.2.0"

[patch.crates-io]
cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust", rev = "5a9f64868dd8d2142f1e699da0d60f0601299b0b" } # FIXME: awaiting release

[profile.release]
lto=true
